# dwml-backend-flask

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  DudeWheresMyLambo.db  Flask_Tutorial.md  Makefile  Pipfile  README.md  authentication.py  celery_worker.py  credentials.json  docker-compose.yml  env.example  openapi-3.0.yaml  openapi.yaml  pyproject.toml  requirements.txt  run.py  setup.cfg
.github/workflows/: push.yml
app/: __init__.py  celery_app.py  config.py  constants.py  extensions.py  router.py
app/core/: schema.py  tasks.py  views.py
app/core/utils/: DataCache.py  DataCacheAlchemy.py  DataCollector.py  GraphCreator.py  data_collector.py  graph_creator.py
app/domain/: __init__.py  constants.py  exceptions.py  graphql_schema.py  models.py  repositories.py  routes.py  schemas.py  services.py  tasks.py
app/domain/proto_files/: __init__.py  api.proto
app/endpoints/: __init__.py  crypto.py  health.py
app/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  security.py
app/models/: __init__.py  crypto_models.py
app/schemas/: __init__.py  crypto_schemas.py  graphql_schema.py
app/services/: __init__.py  crypto_service.py
app/shared/: __init__.py  database.py  tasks.py
app/shared/middleware/: auth.py  cors.py  error_handler.py  rate_limit.py
app/utils/: __init__.py  data_cache.py  data_cache_alchemy.py  data_collector.py  graph_creator.py
app/utils/proto_files/: __init__.py  api_pb2.py  api_pb2_grpc.py
docs/: Flask_Tutorial.md
scripts/: create-prod-release.sh  setup-pre-commit.sh  validate-requirements.py
tests/: conftest.py  test_frontend.py
tests/fixtures/: sample_data.json
tests/integration/: test_api_endpoints.py  test_frontend.py  test_graphql_endpoints.py
tests/unit/: test_crypto_service.py  test_models.py  test_schemas.py
